# chartora

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  ROADMAP.md
.claude/: settings.json
.github/workflows/: ci.yml  pages.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_users_auth_alerts.py  003_add_government_contracts.py  004_add_news_unique_constraint.py  005_clean_irrelevant_news.py
backend/scripts/: backfill_historical_scores.py  load_test.py  refresh_data.py  seed_companies.py  seed_default_user.py
backend/src/adapters/api/: cache_middleware.py  dependencies.py  main.py  middleware.py  premium_gate.py  schemas.py
backend/src/adapters/api/routers/: affiliate.py  api_docs.py  auth.py  companies.py  leaderboard.py  payments.py  premium.py  rankings.py  sectors.py
backend/src/adapters/repositories/: __init__.py  alert_preference_repository.py  api_key_repository.py  company_repository.py  filing_repository.py  government_contract_repository.py  news_repository.py  patent_repository.py  score_repository.py  stock_repository.py  user_repository.py
backend/src/config/: settings.py
backend/src/domain/interfaces/: __init__.py  data_sources.py  plugins.py  repositories.py
backend/src/domain/models/: __init__.py  entities.py  sector_config.py  value_objects.py
backend/src/infrastructure/: auth.py  cache.py  database.py  email_service.py  monitoring.py  news_client.py  sec_edgar.py  sec_edgar_xbrl.py  sentiment.py  usaspending_client.py  uspto_client.py  yahoo_finance.py
backend/src/usecases/: __init__.py  calculate_score.py  rank_companies.py  sector_pipeline.py
backend/tests/: conftest.py
backend/tests/integration/: test_repositories.py
backend/tests/unit/: test_affiliate.py  test_alert_model.py  test_api_companies.py  test_api_leaderboard.py  test_api_rankings.py  test_api_sectors.py  test_auth.py  test_cache.py  test_cache_middleware.py  test_calculate_score.py  test_database_schema.py  test_domain_models.py  test_government_contract_model.py  test_health.py  test_interfaces.py  test_load_test.py  test_monitoring.py  test_news_client.py  test_payments.py  test_plugins.py  test_premium_endpoints.py  test_premium_gate.py  test_rank_companies.py  test_refresh_data.py  test_sec_edgar.py  test_sec_edgar_xbrl.py  test_sector_config.py  test_sector_pipeline.py  test_seed_default_user.py  test_sentiment.py  test_usaspending_client.py  test_user_model.py  test_uspto_client.py  test_yahoo_finance.py
docs/: API_SUMMARY.md
docs/adr/: 001-funding-data-sources.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/tests/: home.test.tsx  setup.ts
infra/: docker-compose.prod.yml  docker-compose.yml
infra/cron/: daily_refresh.sh
infra/hooks/: pre-commit
infra/nginx/: chartora.conf  chartora.prod.conf
infra/scripts/: backup_db.sh  setup_ssl.sh
infra/tests/: test_deployment.sh
(+77 files in other folders)
